--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<html lang="fr">
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
+<h2>Présentations :</h2>
+<ul>
+    <li>
+        <a href="https://jersou.github.io/comprendre-git-presentation/">Comprendre git</a>
+    </li>
+    <li>
+        <a href="https://jersou.github.io/Intro-a-Kubernetes-depuis-Docker-Compose/">Kubernetes depuis Docker Compose</a>
+    </li>
+</ul>
+
+</body>
+</html>
