--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 </head>
 <body>
 <h2>Présentations :</h2>
+
+<p>
+Ces présentations ont été faites avec <a target="_blank" href="https://sozi.baierouge.fr/">Sozi</a>.
+Elles s'afficheront mieux avec Chrome et sur un écran 16/9 en mode plein écran (avec F11).
+</p>
+<p>
+Les contrôles en résumé : clic gauche pour avancer, droit pour reculer, et milieu pour afficher la liste des slides.
+<a href="https://sozi.baierouge.fr/pages/play-fr.html">Plus d'info sur les contrôles ici.</a>
+</p>
 <ul>
     <li>
         <a href="https://jersou.github.io/comprendre-git-presentation/">Comprendre git</a>
